tests/Fixtures/Torture/Bad/logical_int.g
// EXPECT G004
kernel { entry func Main() { let x = 3 && 4; } }
